--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "mcamara/laravel-localization": "^2.0",
         "twbs/bootstrap": "5.3.3"
     },
     "require-dev": {
